# B3_2025_ASVSpoof

./: .gitignore  PLAN.md  README.md  convert_mat_to_pkl.py  file_list.txt  pyproject.toml  setup.sh
LA/: __init__.py  cqcc_gmm.py  lfcc_gmm.py  lfcc_lcnn.py  rawnet2.py
LA/pretrained/: LFCC_GMM.pkl
PA/: __init__.py  cqcc_gmm.py  lfcc_gmm.py  lfcc_lcnn.py  rawnet2.py
PA/pretrained/: LFCC_GMM.pkl  LFCC_LCNN.pt
common/: __init__.py  audio_utils.py  base_model.py
common/feature_extraction/: __init__.py
logs/: conversation_log.md  investigation_report.md  verification_report.md
