[project]
name = "b3-asvspoof-inference"
version = "0.1.0"
description = "ASVSpoof2021 Baseline Inference System"
requires-python = ">=3.8,<3.9"
dependencies = [
    "h5py>=3.11.0",
    "librosa>=0.11.0",
    "matplotlib>=3.7.5",
    "numpy>=1.18.0,<1.24.0",
    "pandas>=2.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "soundfile==0.12.1",
    "spafe==0.1.2",
    "torch>=1.6.0,<1.7.0",
    "torchaudio>=0.6.0,<0.7.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["LA", "PA", "common", "common.*"]
exclude = ["logs", "ASVSpoof2021_baseline_system", "GMM_training"]
